# OpenGov-EarlyRussian

./: .gitignore  .pre-commit-config.yaml  BUILD_COMPLETE.md  CHANGELOG.md  COMPLETE_VERIFICATION.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_DEMONSTRATION.txt  FINAL_REPORT.md  FINAL_STATUS.md  INDEX.md  Makefile  PROJECT_COMPLETE.md  PROJECT_STATUS.txt  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  STATUS.md  SUMMARY.md  VERIFICATION.md  build_package.sh  demo.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_api.sh  validate.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  business_culture.py  srs_example.py
notebooks/: 01_getting_started.ipynb
opengov_earlyrussian/: __init__.py  cli.py  config.py
opengov_earlyrussian/ai/: __init__.py  conversation.py
opengov_earlyrussian/api/: __init__.py  main.py
opengov_earlyrussian/core/: __init__.py  alphabet.py  business.py  cases.py  culture.py  pronunciation.py  srs.py  transliteration.py  verbs.py
tests/: __init__.py  test_ai_conversation.py  test_alphabet.py  test_api.py  test_api_chat.py  test_business_culture.py  test_cases.py  test_cli.py  test_cli_unit.py  test_coverage_improvements.py  test_integration.py  test_performance.py  test_pronunciation_srs.py  test_verbs_translit.py
