[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "opengov-earlyrussian"
version = "0.1.0"
description = "AI-powered comprehensive Russian language learning platform with cultural immersion"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nik Jois", email = "nikjois@llamasearch.ai"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]

dependencies = [
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.25.0",
    "openai>=1.35.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "markdown>=3.5",
    "structlog>=23.2.0",
    "prometheus-client>=0.18.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "typer>=0.12.3",
    "rich>=13.6.0",
    "unidecode>=1.3.8",
    "babel>=2.13.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.90.0",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
    "black>=24.4.2",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "notebook>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/llamasearchai/OpenGov-EarlyRussian"
Documentation = "https://github.com/llamasearchai/OpenGov-EarlyRussian#readme"
Repository = "https://github.com/llamasearchai/OpenGov-EarlyRussian"

[project.scripts]
russian = "opengov_earlyrussian.cli:app"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.6",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
    "black>=24.4.2",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=opengov_earlyrussian --cov-report=term-missing {args:tests}"
lint = "ruff check opengov_earlyrussian tests"
fmt = "black opengov_earlyrussian tests"
fmt-check = "black --check opengov_earlyrussian tests"
type = "mypy opengov_earlyrussian tests"
serve = "uvicorn opengov_earlyrussian.api.main:app --reload --host 0.0.0.0 --port 8000"
all = ["fmt", "lint", "type", "test"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "performance: performance tests",
]
asyncio_mode = "auto"
