[metadata]
name = opengov-earlyrussian
version = 0.1.0
author = Nik Jois
author_email = nikjois@llamasearch.ai
description = AI-powered comprehensive Russian language learning platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opengov/earlyrussian
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Education

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    pydantic>=2.4.0
    pydantic-settings>=2.0.0
    fastapi>=0.110.0
    uvicorn[standard]>=0.27.0
    httpx>=0.25.0
    openai>=1.35.0
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.3.0
    redis>=5.0.0
    sqlalchemy>=2.0.0
    alembic>=1.12.0
    asyncpg>=0.29.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.4
    python-multipart>=0.0.6
    jinja2>=3.1.2
    markdown>=3.5
    structlog>=23.2.0
    prometheus-client>=0.18.0
    aiofiles>=23.2.1
    python-dotenv>=1.0.0
    typer>=0.12.3
    rich>=13.6.0
    unidecode>=1.3.8
    babel>=2.13.0
    langdetect>=1.0.9

[options.packages.find]
exclude =
    tests*
    examples*

[options.entry_points]
console_scripts =
    russian = opengov_earlyrussian.cli:app

